# prl_nettool

./: .gitignore  50_prl_nettool.cfg  Makefile.BSD  Makefile.Linux  Makefile.Windows  common.c  common.h  namelist.c  namelist.h  netinfo.c  netinfo.h  netinfo_common.c  nettool.c  options.c  options.h  posix_dns.c  posix_dns.h  prl_nettool.wxs  setnet.c  setnet.h
BSD/: exec.c  exec.h  netinfo.c  rcconf.c  rcconf.h  rcconf_list.c  rcconf_list.h  rcconf_sublist.c  rcconf_sublist.h  rcprl.c  rcprl.h  resolvconf.c  resolvconf.h  setnet.c
BSD/test/: CMakeLists.txt  test.c  test.sh
Linux/: detection.c  detection.h  exec.c  exec.h  netinfo.c  setnet.c
Linux/scripts/: debian-get_dhcp.sh  debian-netplan_restart.sh  debian-restart.sh  debian-set_dhcp.sh  debian-set_gateway.sh  debian-set_ip.sh  debian-set_route.sh  functions  netplan-cfg.py  nm-get_dhcp.sh  nm-restart.sh  nm-set_dhcp.sh  nm-set_dns.sh  nm-set_gateway.sh  nm-set_ip.sh  nm-set_route.sh  redhat-get_dhcp.sh  redhat-restart.sh  redhat-set_dhcp.sh  redhat-set_gateway.sh  redhat-set_ip.sh  redhat-set_route.sh  set_dns.sh  suse-get_dhcp.sh  suse-restart.sh  suse-set_dhcp.sh  suse-set_gateway.sh  suse-set_ip.sh  suse-set_route.sh
